class banner:

    def show_with_paren(self, arg):
        print('(', arg, ')')

    def show_with_aster(self, arg):
        print('*', arg, '*')
